# SampleFarm

./: .gitattributes  .gitignore  COPYRIGHT  README.md  README_CN.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
backend/: Cargo.toml  README.md  config.example.toml
backend/database/: deploy.sql  init.sql  schema.sql
backend/src/: config.rs  docs.rs  error.rs  lib.rs  main.rs  response.rs  routes.rs
backend/src/config/: cape.rs  cfg.rs
backend/src/database/: mod.rs
backend/src/file_processing/: analyzer.rs  extractor.rs  hasher.rs  mod.rs  validator.rs
backend/src/handlers/: analysis_result.rs  cape_executor.rs  cape_instance.rs  cfg_executor.rs  cfg_instance.rs  mod.rs  sample_full.rs  samples_export.rs  simple_sample.rs  task_export.rs  task_management.rs  task_preview.rs
backend/src/models/: analyzer.rs  cape_instance.rs  cape_result.rs  cfg_instance.rs  cfg_result.rs  mod.rs  sample.rs  task.rs
backend/src/repositories/: cape_task_runtime.rs  mod.rs  sample.rs  task_simple.rs
backend/src/services/: cape_client.rs  cape_instance_manager.rs  cape_manager.rs  cape_processor.rs  cape_report_fetcher.rs  cape_status_poller.rs  cfg_client.rs  cfg_instance_manager.rs  cfg_processor.rs  cfg_status_sync.rs  mod.rs  startup_recovery.rs
backend/src/storage/: minio.rs  mod.rs
cfg/: Dockerfile  README.md  api.py  asm.py  bert_data.py  constant.py  docker-compose.yml  extract_cfg.py  generate_embeddings.py  parse.py  process.py  requirements.txt  test_api.py
cfg/Palmtree/pre-trained_model/: eval_utils.py  vocab.py
cfg/pypackage/: README.md  pypackage.7z.001  pypackage.7z.002  pypackage.7z.003  pypackage.7z.004  pypackage.7z.005  pypackage.7z.006
client/: README.md  batch_upload.py  pyproject.toml
frontend/: CONFIG.md  DEVELOPMENT_PROGRESS.md  README.md  env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: config.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/cape-management/: page.tsx
frontend/src/app/cfg-management/: page.tsx
frontend/src/app/files/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: advanced-search-filters.tsx  file-table.tsx  file-tree.tsx  file-upload-dialog.tsx  json-viewer.tsx  navigation.tsx  providers.tsx  sample-detail-dialog.tsx  sample-stats-extended.tsx  stats-bar.tsx  virtual-json-viewer.tsx
frontend/src/components/cape-management/: cape-instance-dialog.tsx  cape-instances-table.tsx  cape-status-badge.tsx  index.ts
frontend/src/components/cfg-management/: cfg-instance-edit-dialog.tsx  cfg-instance-stats-dialog.tsx  cfg-status-badge.tsx
frontend/src/components/task-management/: analysis-result-dialog.tsx  analyzer-badge.tsx  cape-runtime-dialog.tsx  cfg-analysis-result-dialog.tsx  execution-monitor-view.tsx  execution-params-dialog.tsx  index.ts  sub-task-filters.tsx  (+9 more)
frontend/src/lib/: api.ts  config.ts  i18n.tsx  types.ts  utils.ts
(+4 files in other folders)
