[package]
name = "samplefarm-backend"
version = "0.1.0"
edition = "2024"
license = "CC BY-NC-SA 4.0"
description = "A comprehensive malware analysis platform backend service"
authors = ["SampleFarm Project"]
repository = "https://github.com/your-org/samplefarm"
readme = "../README.md"
keywords = ["malware", "analysis", "security", "forensics", "sandbox"]
categories = ["command-line-utilities", "web-programming", "cryptography"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-config = "1.8.3"
aws-sdk-s3 = "1.100.0"
axum = { version = "0.8.4", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
hex = "0.4.3"
hyper = { version = "1.6.0", features = ["full"] }
infer = "0.19.0"
md5 = "0.8.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
bytes = "1.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
zip = { version = "4.3.0", features = ["aes-crypto"] }
rand = "0.9.2"
