[project]
name = "samplefarm-client"
version = "0.1.0"
description = "SampleFarm batch upload client tools"
license = {text = "CC BY-NC-SA 4.0"}
authors = [
    {name = "SampleFarm Project"}
]
readme = "README.md"
requires-python = ">=3.8.1"
keywords = ["malware", "analysis", "upload", "client", "batch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0,<8.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
